--- a/frontend/src/assets/css/app.css
+++ b/frontend/src/assets/css/app.css
@@ -31,9 +31,19 @@
   border: 1px solid #000;
   margin: 20px 0;
 }
+.booklist__card__title {
+  font-size: 20px;
+  font-weight: 700;
+}
+.booklist__card__author {
+  color: gray;
+}
+.booklist__card__price {
+  color: red;
+}
 
 .page {
-  height: calc(100vh - 64px);
+  min-height: calc(100vh - 64px);
   padding: 0 24px;
 }
 .page-error {
