--- a/frontend/src/assets/css/app.css
+++ b/frontend/src/assets/css/app.css
@@ -2,6 +2,8 @@
   --primary-color: #2A8091;
   --secondary-color: #57C7DE;
   --accent-color: #DE9557;
+  --green-success: #76af32;
+  --red-alert: #D2553A;
 }
 
 * {
@@ -10,7 +12,12 @@
   box-sizing: border-box;
 }
 
-.header, .footer {
+a {
+  text-decoration: none;
+}
+
+/* Header */
+.header {
   background-color: var(--primary-color);
   color: #fff;
   min-height: 50px;
@@ -22,26 +29,21 @@
   font-size: 20px;
 }
 
+/* Footer */
+.footer {
+  background-color: var(--primary-color);
+  color: #fff;
+  min-height: 50px;
+  width: 100%;
+  padding: 20px 14px;
+}
+
 .footer .authors {
   font-size: 20px;
   text-align: center;
 }
 
-.booklist__card {
-  border: 1px solid #000;
-  margin: 20px 0;
-}
-.booklist__card__title {
-  font-size: 20px;
-  font-weight: 700;
-}
-.booklist__card__author {
-  color: gray;
-}
-.booklist__card__price {
-  color: red;
-}
-
+/* Page */
 .page {
   min-height: calc(100vh - 64px);
   padding: 0 24px;
@@ -50,6 +52,104 @@
   padding: 100px;
   font-size: 40px;
   text-align: center;
+}
+.page__title {
+  font-size: 40px;
+}
+
+/* Topbar */
+.topbar {
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  margin: 10px 0;
+}
+
+.home__topbar {
+  justify-content: space-between;
+}
+.home__button-add {
+  font-weight: 600;
+  width: fit-content;
+  padding: 10px 14px;
+  margin: 8px 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  background-color: var(--accent-color);
+}
+.home__button-add:hover {
+  transform: scale(1.1);
+}
+
+.create__topbar {
+  justify-content: flex-start;
+  gap: 20px;
+}
+
+.form {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 10px 20px;
+  width: 400px;
+}
+.form p {
+  margin: 20px 0;
+}
+.form label {
+  display: block;
+  font-weight: 700;
+}
+.form input, .form select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 3px 0 15px 0;
+  display: block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+.form .button {
+  display: inline;
+  width: 100px;
+  padding: 10px 14px;
+  margin: 8px 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.form .button--green {
+  background-color: var(--green-success);
+  color: white;
+}
+.form .button--green:hover {
+  transform: scale(1.1);
+}
+.form .button--red {
+  background-color: var(--red-alert);
+  color: white;
+}
+.form .button--red:hover {
+  transform: scale(1.1);
+}
+
+.booklist__card {
+  border: 1px solid #000;
+  margin: 20px 0;
+  padding: 10px 14px;
+}
+.booklist__card__title {
+  margin: 10px 0;
+  font-size: 20px;
+  font-weight: 700;
+}
+.booklist__card__author {
+  margin: 10px 0;
+  color: gray;
+}
+.booklist__card__price {
+  margin: 10px 0;
+  color: red;
 }
 
 /*# sourceMappingURL=app.css.map */
