--- a/frontend/src/assets/css/app.css
+++ b/frontend/src/assets/css/app.css
@@ -65,6 +65,18 @@ a {
   margin: 10px 0;
 }
 
+.pagination {
+  display: flex;
+  list-style-type: none;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  margin: 30px 0;
+  cursor: pointer;
+}
+.pagination__item--active {
+  background-color: aqua;
+}
 .home__topbar {
   justify-content: space-between;
 }
