--- a/frontend/src/assets/css/components.scss
+++ b/frontend/src/assets/css/components.scss
@@ -52,3 +52,20 @@
     margin: 10px 0;
 }
 
+.pagination {
+    display: flex;
+    list-style-type: none; 
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    margin: 30px 0;
+    cursor: pointer;
+    &__item {
+        &--active {
+            background-color: aqua;
+        }
+    }
+    &__link {
+        &--active {}
+    }
+}
