--- a/frontend/src/assets/css/components.scss
+++ b/frontend/src/assets/css/components.scss
@@ -54,17 +54,30 @@
 
 .pagination {
     display: flex;
-    list-style-type: none; 
+    list-style-type: none;
     align-items: center;
     justify-content: center;
-    gap: 10px;
     margin: 30px 0;
     cursor: pointer;
+    gap: 10px;
+
+    &__controlls {
+        background-color: transparent;
+    }
+
     &__item {
+        border-radius: 40px;
+        width: 40px;
+        padding: 8px 10px;
+        text-align: center;
+        background-color: rgb(215, 215, 215);
         &--active {
-            background-color: aqua;
+            width: 60px;
+            color: #fff;
+            background-color: var(--primary-color);
         }
     }
+
     &__link {
         &--active {}
     }
