--- a/frontend/src/assets/css/app.css
+++ b/frontend/src/assets/css/app.css
@@ -78,17 +78,22 @@ a {
   background-color: transparent;
 }
 .pagination__item {
+  background-color: transparent;
+}
+.pagination__link {
+  display: block;
   border-radius: 40px;
   width: 40px;
   padding: 8px 10px;
   text-align: center;
   background-color: rgb(215, 215, 215);
 }
-.pagination__item--active {
+.pagination__link--active {
   width: 60px;
   color: #fff;
   background-color: var(--primary-color);
 }
+
 .home__topbar {
   justify-content: space-between;
 }
