--- a/frontend/src/assets/css/app.css
+++ b/frontend/src/assets/css/app.css
@@ -65,6 +65,35 @@ a {
   margin: 10px 0;
 }
 
+.pagination {
+  display: flex;
+  list-style-type: none;
+  align-items: center;
+  justify-content: center;
+  margin: 30px 0;
+  cursor: pointer;
+  gap: 10px;
+}
+.pagination__controlls {
+  background-color: transparent;
+}
+.pagination__item {
+  background-color: transparent;
+}
+.pagination__link {
+  display: block;
+  border-radius: 40px;
+  width: 40px;
+  padding: 8px 10px;
+  text-align: center;
+  background-color: rgb(215, 215, 215);
+}
+.pagination__link--active {
+  width: 60px;
+  color: #fff;
+  background-color: var(--primary-color);
+}
+
 .home__topbar {
   justify-content: space-between;
 }
