--- a/frontend/src/assets/css/components.scss
+++ b/frontend/src/assets/css/components.scss
@@ -1,85 +1,132 @@
 /* Header */
 .header {
-    background-color: var(--primary-color);
-    color: #fff;
-    min-height: 50px;
-    width: 100%;
-    padding: 20px 14px;
+  background-color: var(--primary-color);
+  color: #fff;
+  min-height: 50px;
+  width: 100%;
+  padding: 20px 14px;
 }
 
 .header .logo {
-    font-size: 20px;
+  font-size: 20px;
 }
-
 
 /* Footer */
 .footer {
-    background-color: var(--primary-color);
-    color: #fff;
-    min-height: 50px;
-    width: 100%;
-    padding: 20px 14px;
+  background-color: var(--primary-color);
+  color: #fff;
+  min-height: 50px;
+  width: 100%;
+  padding: 20px 14px;
 }
 
 .footer .authors {
-    font-size: 20px;
-    text-align: center;
+  font-size: 20px;
+  text-align: center;
 }
-
 
 /* Page */
 .page {
-    min-height: calc(100vh - 64px);
-    padding: 0 24px;
+  min-height: calc(100vh - 64px);
+  padding: 0 24px;
 
-    &-error {
-        padding: 100px;
-        font-size: 40px;
-        text-align: center;
-    }
+  &-error {
+    padding: 100px;
+    font-size: 40px;
+    text-align: center;
+  }
 
-    &__title {
-        font-size: 40px;
-    }
+  &__title {
+    font-size: 40px;
+  }
 }
-
 
 /* Topbar */
 .topbar {
-    background-color: #fff;
-    display: flex;
-    align-items: center;
-    margin: 10px 0;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  margin: 10px 0;
 }
 
 .pagination {
-    display: flex;
-    list-style-type: none;
-    align-items: center;
-    justify-content: center;
-    margin: 30px 0;
+  display: flex;
+  list-style-type: none;
+  align-items: center;
+  justify-content: center;
+  margin: 30px 0;
+  cursor: pointer;
+  gap: 10px;
+
+  &__controlls {
+    background-color: transparent;
+  }
+
+  &__item {
+    background-color: transparent;
+  }
+
+  &__link {
+    display: block;
+    border-radius: 40px;
+    width: 40px;
+    padding: 8px 10px;
+    text-align: center;
+    background-color: rgb(215, 215, 215);
+    &--active {
+      width: 60px;
+      color: #fff;
+      background-color: var(--primary-color);
+    }
+  }
+}
+
+/* Toast */
+
+.notification-container {
+  font-size: 14px;
+  box-sizing: border-box;
+  position: fixed;
+  padding: 10px;
+}
+
+.toast {
+  border-radius: 0.25rem;
+  padding: 0.75rem;
+  z-index: 999998;
+  box-shadow: 5px 5px 10px rgb(103, 103, 103, 0.3);
+  &__button {
+    display: block;
+    border: none;
+    background-color: transparent;
+    float: right;
     cursor: pointer;
-    gap: 10px;
+  }
+  &--success {
+    background-color: #fff;
+    color: #000;
+  }
+}
 
-    &__controlls {
-        background-color: transparent;
-    }
+@keyframes toast-slide-down {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
 
-    &__item {
-       background-color: transparent;
-    }
+.top-right {
+  top: 12px;
+  right: 12px;
+  transition: transform 0.6s ease-in-out;
+  animation: toast-slide-down 0.6s;
+}
 
-    &__link {
-        display: block;
-        border-radius: 40px;
-        width: 40px;
-        padding: 8px 10px;
-        text-align: center;
-        background-color: rgb(215, 215, 215);
-        &--active {
-            width: 60px;
-            color: #fff;
-            background-color: var(--primary-color);
-        }
-    }
+.hide {
+  display: none;
+}
+.show {
+  display: block;
 }
