--- a/frontend/src/assets/css/booklist.scss
+++ b/frontend/src/assets/css/booklist.scss
@@ -1,12 +1,22 @@
 .booklist {
-  &__card {
-    border: 1px solid #000;
-    margin: 20px 0;
-    padding: 10px 14px;
-    &__title {
-      margin: 10px 0;
-      font-size: 20px;
-      font-weight: 700;
+    min-height: 70vh;
+    &__card {
+      border: 1px solid #000;
+      margin: 20px 0;
+      padding: 10px 14px;
+      &__title {
+        margin: 10px 0;
+        font-size: 20px;
+        font-weight: 700;
+      }
+      &__author {
+        margin: 10px 0;
+        color: gray;
+      }
+      &__price {
+        margin: 10px 0;
+        color: red;
+      }
     }
     &__author {
       margin: 10px 0;
