--- a/frontend/src/assets/css/booklist.scss
+++ b/frontend/src/assets/css/booklist.scss
@@ -1,34 +1,33 @@
 .booklist {
-    min-height: 70vh;
-    &__card {
-      border: 1px solid #000;
-      margin: 20px 0;
-      padding: 10px 14px;
-      &__title {
-        margin: 10px 0;
-        font-size: 20px;
-        font-weight: 700;
-      }
-      &__author {
-        margin: 10px 0;
-        color: gray;
-      }
-      &__price {
-        margin: 10px 0;
-        color: red;
-      }
+  min-height: 70vh;
+  &__card {
+    border: 1px solid #000;
+    margin: 20px 0;
+    padding: 10px 14px;
+    &__title {
+      margin: 10px 0;
+      font-size: 20px;
+      font-weight: 700;
     }
     &__author {
       margin: 10px 0;
       color: gray;
     }
-    &__description {
-      margin: 10px 0;
-    }
     &__price {
       margin: 10px 0;
       color: red;
     }
+  }
+  &__author {
+    margin: 10px 0;
+    color: gray;
+  }
+  &__description {
+    margin: 10px 0;
+  }
+  &__price {
+    margin: 10px 0;
+    color: red;
   }
 }
 
@@ -43,7 +42,8 @@
       border: none;
       margin-right: 20px;
       padding: 3px 7px;
-      border: 1px solid gray;    }
+      border: 1px solid gray;
+    }
   }
   &__label {
     margin-top: 20px;
