--- a/frontend/src/assets/css/components.scss
+++ b/frontend/src/assets/css/components.scss
@@ -90,21 +90,27 @@
   padding: 10px;
 }
 
+.toast_group {
+  position: fixed;
+  top: 20px;
+  right: 10px;
+}
+
 .toast {
+  background-color: rgb(255, 255, 255);
   border-radius: 0.25rem;
   padding: 0.75rem;
   z-index: 999998;
   box-shadow: 5px 5px 10px rgb(103, 103, 103, 0.3);
+  width: 300px;
+  height: fit-content;
+  margin: 10px 0;
   &__button {
     display: block;
     border: none;
     background-color: transparent;
     float: right;
     cursor: pointer;
-  }
-  &--success {
-    background-color: #fff;
-    color: #000;
   }
 }
 
