--- a/frontend/src/assets/css/_form.scss
+++ b/frontend/src/assets/css/_form.scss
@@ -1,54 +1,65 @@
 .form {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 10px 20px;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 10px 20px;
+  width: 400px;
+
+  p {
+    margin: 20px 0;
+  }
+
+  label {
+    display: block;
+    font-weight: 700;
+    margin-top: 15px ;
+  }
+
+  input,
+  select {
+    width: 100%;
+    padding: 12px 20px;
+    display: block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+
+  .error {
+    font-size: 12px;
+    color: red;
     width: 400px;
-
-    p {
-      margin: 20px 0;
-    }
-
-    label {
-      display: block;
-      font-weight: 700;
-    }
-
-    input, select {
-      width: 100%;
-      padding: 12px 20px;
-      margin: 3px 0 15px 0;
-      display: block;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      box-sizing: border-box;
-    }
-
-    .button {
-      display: inline;
-      width: 100px;     
-      padding: 10px 14px;
-      margin: 8px 10px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    
-      &--green {
-        background-color: var(--green-success);
-        color: white;
-     
-        &:hover {
-          
-          transform: scale(1.1);
-        }
-      }
-    
-      &--red {
-        background-color: var(--red-alert);
-        color: white;
-      
-        &:hover {
-            transform: scale(1.1);
-        }
-      }      
+    margin: 5px 0 10px 0;
+    &:before {
+      content: '❌ ';
+      font-size: 10px;
     }
   }
+
+  .button {
+    display: inline;
+    width: 100px;
+    padding: 10px 14px;
+    margin: 8px 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+
+    &--green {
+      background-color: var(--green-success);
+      color: white;
+
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
+
+    &--red {
+      background-color: var(--red-alert);
+      color: white;
+
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
+  }
+}
