--- a/frontend/src/assets/css/app.scss
+++ b/frontend/src/assets/css/app.scss
@@ -1,9 +1,10 @@
-@import "custom";
+@import "booklist";
+@import "button";
+@import "form";
+@import "modal";
+@import "toast";
+@import "pagination";
 @import "components";
 @import "pages";
-@import "form";
-@import "booklist";
 @import "spinner";
-@import "toast";
-@import "modal";
-@import "pagination";
+@import "custom";
